@@ -82,7 +82,7 @@ TAO_UIPMC_Connector::close (void)
   while (!iter.done ())
     {
       // Delete the connection handler
-      delete (*iter).int_id_;
+      (*iter).int_id_->decr_refcount();
       iter++;
     }
 
